# MatrixController

./: .gitignore  CMakeLists.txt  MatrixController.code-workspace  README.md  diagram.json  nvs_part.csv  sdkconfig  sdkconfig.old  wokwi.toml
main/: CMakeLists.txt  FunctionCallbackHelper.hpp  TinyJson.hpp  http_webpage_handlers.hpp  main.cpp  tasks_common.h
main/DynamicConfig/: AbstractListener.hpp  DynamicConfig.hpp
main/DynamicConfig/Loaders/: IConfigLoader.hpp  MockLoader.hpp  NVSConfigLoader.cpp  NVSConfigLoader.hpp
main/Effects/: AbstractEffect.hpp  Animation.hpp  CrazyBees.hpp  EffectFactory.hpp  Fire.hpp  Framebuffer.cpp  Framebuffer.hpp  Matrix.hpp  PlasmaWaves.hpp  Rainbow.hpp  RemoteEffect.hpp  SnowFall.hpp  Sparkles.hpp  Waterfall.hpp
main/Formater/: DateFormat.hpp  Formater.hpp  IFormat.hpp  TimeFormat.hpp  TimeTillFormat.hpp
main/Matrix/: IMatrix.cpp  IMatrix.hpp  UartMatrix.cpp  UartMatrix.hpp  UdpMatrix.cpp  UdpMatrix.hpp  WS2812Matrix.cpp  WS2812Matrix.hpp
main/TextEffect/: Fonts.h  Fonts.hpp  GFXFont.hpp  ReScaler.hpp  TextEffect.hpp  TextSequenceEffect.hpp  TextTemplate.hpp
main/TextEffect/FontsRus/: Bahamas6.h  Cooper6.h  CourierCyr6.h  Crystal6.h  CrystalNormal6.h  FreeMono6.h  FreeMonoBold6.h  FreeMonoBoldOblique6.h  FreeMonoOblique6.h  FreeSans6.h  FreeSansBold6.h  FreeSansBoldOblique6.h  FreeSansOblique6.h  FreeSerif6.h  FreeSerifBold6.h  FreeSerifBoldItalic6.h  FreeSerifItalic6.h  TimesNRCyr6.h
main/webpage/: asset-manifest.json  index.html  style.css
main/webpage/static/js/: chunk.27.js  main.js
main/wifi_app/: MatrixInfo.cpp  MatrixInfo.hpp  WifiConfigListener.hpp  http_server.cpp  http_server.h  wifi_app.cpp  wifi_app.h
web/: package.json
web/public/: manifest.json
web/src/: App.js  Card.js  DeviceSelector.js  DevicesContext.js  EffectsCollection.js  Navigation.js  SyncUI.js  index.js
web/src/InputElements/: CheckBox.js  Select.js  TimePicker.js
web/src/TextTemplates/: TextSequenceUI.js  TextTemplatePreview.js
web1/: package-lock.json
web1/public/: index.html
web1/src/: Card.js  CardCollection.js  Settings.js  requests.js  useLocalStorage.js
web1/src/InputElements/: Button.js  ColorPicker.js  ControlUI.js  InputElementProperties.js  NumberArea.js  PropertiesUI.js  Slider.js  TextArea.js
web1/src/TextTemplates/: TextSequenceColletion.js  (+2 more)
