idf_component_register(
    SRCS "main.cpp" "wifi_app/wifi_app.cpp" "wifi_app/http_server.cpp" "Matrix/IMatrix.cpp" "Matrix/WS2812Matrix.cpp" "Matrix/UartMatrix.cpp" "Effects/Framebuffer.cpp" "DynamicConfig/Loaders/NVSConfigLoader.cpp"
    INCLUDE_DIRS "."
    EMBED_FILES 
        "webpage/index.html"        
        "webpage/style.css"
        "webpage/favicon.ico"
        "webpage/manifest.json"
        "webpage/icons.woff2"
        "webpage/asset-manifest.json"
        "webpage/static/js/chunk.27.js"
        "webpage/static/js/main.js"
        "webpage/static/media/add.svg"
        "webpage/static/media/crazybees.png"
        "webpage/static/media/fire.png"
        "webpage/static/media/matrix.png"
        "webpage/static/media/plasmawaves.png"
        "webpage/static/media/rainbow.png"
        "webpage/static/media/sparkles.png"
        "webpage/static/media/waterfall.png"
)
