idf_component_register(
    SRCS 
        "main.cpp" 
        "wifi_app/wifi_app.cpp" 
        "wifi_app/http_server.cpp"
        "wifi_app/MatrixInfo.cpp"
        "Matrix/IMatrix.cpp" 
        "Matrix/UdpMatrix.cpp" 
        "Matrix/WS2812Matrix.cpp" 
        "Matrix/UartMatrix.cpp" 
        "Effects/Framebuffer.cpp" 
        "DynamicConfig/Loaders/NVSConfigLoader.cpp"        
    INCLUDE_DIRS "."
    EMBED_FILES 
        "webpage/index.html.gz"        
        "webpage/style.css"
        "webpage/favicon.ico"
        "webpage/manifest.json"
        #[["webpage/icons.woff2"]]
        "webpage/asset-manifest.json.gz"
        "webpage/static/js/chunk.27.js.gz"
        "webpage/static/js/main.js.gz"
        "webpage/static/media/add.svg.gz"
        "webpage/static/media/crazybees.svg.gz"
        "webpage/static/media/fire.svg.gz"
        "webpage/static/media/matrix.svg.gz"
        "webpage/static/media/plasmawaves.svg.gz"
        "webpage/static/media/rainbow.svg.gz"
        "webpage/static/media/sparkles.svg.gz"
        "webpage/static/media/waterfall.svg.gz"
        "webpage/static/media/snowfall.svg.gz"
        "webpage/static/media/close.svg.gz"
        "webpage/static/media/menu.svg"
        "webpage/static/media/palette.svg.gz"
        "webpage/static/media/chevron.svg"
)
